# MOM6

./: .gitignore  CMakeLists.txt
cmake/: MOM6Config.cmake.in  mom6_compiler_flags.cmake
config_src/: CMakeLists.txt
src/: CMakeLists.txt
